<resources>
    <string name="app_name">Colors By Views</string>
    <string name="box_one">Box One</string>
    <string name="boxThree">Box Three</string>
    <string name="boxFour">Box Four</string>
    <string name="boxFive">Box Five</string>
    <string name="boxTwo">Box Two</string>
    <string name="by_clicking_on_the_boxes">By Clicking on the boxes</string>
    <string name="how_to_play">How to Play</string>
</resources>