<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOne"
        style="@style/whiteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/box_one"
        android:textColor="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boxTwo"
        style="@style/whiteBox"
        android:layout_width="162dp"
        android:layout_height="148dp"
        android:layout_marginStart="16dp"
        android:text="@string/boxTwo"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOne" />

    <TextView
        android:id="@+id/boxThree"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/boxThree"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/boxFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toTopOf="@+id/boxTwo" />

    <TextView
        android:id="@+id/boxFour"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/boxFour"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/boxFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxThree" />

    <TextView
        android:id="@+id/boxFive"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/boxFive"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="@+id/boxTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxFour" />

    <TextView
        android:id="@+id/tvplay"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:textSize="@dimen/box_text_size"
        android:padding="@dimen/padding"
        android:text="@string/how_to_play"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvhow"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvhow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:textSize="@dimen/box_text_size"
        android:padding="@dimen/padding"
        android:text="@string/by_clicking_on_the_boxes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvplay"
        app:layout_constraintTop_toBottomOf="@+id/boxFive" />

</androidx.constraintlayout.widget.ConstraintLayout>